#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package pdscalibdata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.
Tag: V00-00-09
2011-07-19 Mikhail Dubrovin
- add new classes for CSPad image calibration parameters:
	CalibParsCenterV1
        CalibParsCenterCorrV1
	CalibParsMargGapShiftV1
	CalibParsOffsetV1
	CalibParsOffsetCorrV1
	CalibParsRotationV1
	CalibParsTiltV1
	CalibParsQuadRotationV1
	CalibParsQuadTiltV1	
	
Tag: V00-00-08
2011-05-23 Andy Salnikov
- removed SITConfig include, not useful any more

Tag: V00-00-07
2011-05-23 Andy Salnikov
- suppress compilation warnings for comparison between int and 
  unsigned in ScPadCommonModeSubV1.cpp  

Tag: V00-00-06
2011-02-17 Andy Salnikov
- for common mode correction make the threshold value configurable 

Tag: V00-00-05
2011-02-15 Andy Salnikov
- adding new calibration "configuration" type CsPadFilterV1

Tag: V00-00-04
2011-02-01 Andy Salnikov
- added protection to CsPadCommonModeSubV1::findCommonMode for the case of 
  missing pixel status data

Tag: V00-00-03
2010-11-22 Andy Salnikov
- adding new calibration "configuration" type CsPadCommonModeSubV1

Tag: V00-00-02
2010-11-16 Andy Salnikov
- adding new calibration type CsPadPixelStatus

Tag: V00-00-01
2010-11-08 Andy Salnikov
- for now there is a single calibration class CsPadPedestalsV1